--- a/src/main/resources/static/admin/css/banHang/banHangTaiQuay.css
+++ b/src/main/resources/static/admin/css/banHang/banHangTaiQuay.css
@@ -97,9 +97,9 @@
     vertical-align: middle;
 }
 
-.modal-backdrop {
-    background-color: transparent !important;
-}
+/*.modal-backdrop {*/
+/*    background-color: transparent !important;*/
+/*}*/
 
 .empty-content {
     display: flex;
