--- a/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/ChoXacNhan.html
+++ b/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/ChoXacNhan.html
@@ -108,11 +108,12 @@
             <td>
                 <div class="button-group">
                     <!--XÁC NHẬN ĐƠN HÀNG-->
-                    <button class="action-button XacNhanDon" th:attr="data-id=${hoaDon.id}">
+                    <button class="action-button XacNhanDon" th:attr="data-id=${hoaDon.id}"
+                            th:data-target="'#modalXacNhanDon-' + ${hoaDon.id}">
                         <i class="fas fa-check"></i>
                     </button>
                     <br>
-                    <div class="modal fade xacNhanModal" tabindex="-1" aria-labelledby="xacNhanModalLabel"
+                    <div class="modal fade xacNhanModal" th:id="'modalXacNhanDon-' + ${hoaDon.id}" tabindex="-1" aria-labelledby="xacNhanModalLabel"
                          aria-hidden="true">
                         <div class="modal-dialog modal-dialog-centered">
                             <div class="modal-content">
@@ -134,11 +135,12 @@
                         </div>
                     </div>
                     <!--HỦY ĐƠN HÀNG-->
-                    <button class="action-button HuyDon" th:attr="data-id=${hoaDon.id}">
+                    <button class="action-button HuyDon" th:attr="data-id=${hoaDon.id}"
+                            th:data-target="'#modalHuyDon-' + ${hoaDon.id}">
                         <i class="fas fa-times"></i>
                     </button>
                     <br>
-                    <div class="modal fade huyModal" tabindex="-1" aria-labelledby="huyDonModalLabel"
+                    <div class="modal fade huyModal" th:id="'modalHuyDon-' + ${hoaDon.id}" tabindex="-1" aria-labelledby="huyDonModalLabel"
                          aria-hidden="true">
                         <div class="modal-dialog modal-dialog-centered">
                             <div class="modal-content">
