--- a/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/TatcaDon.html
+++ b/src/main/resources/templates/admin/hoadon/TrangThaiHoaDon/TatcaDon.html
@@ -65,7 +65,7 @@
             <td th:text="${hoaDon.khachHang.hoTen}"></td>
             <td th:text="${hoaDon.sdtNguoiNhan}"></td>
             <td th:text="${#dates.format(hoaDon.ngayTao, 'dd/MM/yyyy')}"></td>
-<!--            <td th:text="${hoaDon.tongTienHoaDon}"></td>-->
+            <!--            <td th:text="${hoaDon.tongTienHoaDon}"></td>-->
             <td th:text="${#numbers.formatDecimal(hoaDon.tongTienHoaDon, 0, 'COMMA', 0, 'POINT')} + ' VNĐ'"></td>
             <td th:text="${hoaDon.ghiChu}"></td>
             <td th:text="${hoaDon.trangThai.name}"></td>
@@ -92,7 +92,8 @@
             </li>
         </ul>
     </div>
-    <div class="alert alert-warning container mt-3" th:if="${#lists.isEmpty(getAllHoaDon)}">
+    <div class="alert alert-warning container mt-3 text-center" th:if="${#lists.isEmpty(getAllHoaDon)}"
+         style="background-color: transparent; border: none;">
         <img src="/admin/img/noData2.png" alt="Không có sản phẩm" style="width: 300px; height: 300px;">
         <p class="empty-message" style="margin-top: 20px; font-size: 1.8em;">KHÔNG CÓ DỮ LIỆU</p>
     </div>
